@@ -56,6 +56,10 @@ Features & Interface
 * Changed the implementation type in BoolCol under SQLite from TINYINT to
   BOOLEAN and made fromDatabase machinery to recognize it.
 
+* Added rich comparison methods; SQLObjects of the same class are
+  considered equal is they have the same id; other methods return
+  NotImplemented.
+
 * A number of changes ported from `SQLObject 0.7.10`_.
 
 SQLObject 0.9.3
